--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,5 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run:  go test -v -coverprofile=profile.cov ./...
+            go tool cover -func profile.cov
