--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,5 +22,6 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run:  go test -v -coverprofile=profile.cov ./...
-            go tool cover -func profile.cov
+      run: | 
+        go test -v -coverprofile=profile.cov ./...
+        go tool cover -func profile.cov
